--- a/2_Quellcode/WebAppTemplate/www/index.html
+++ b/2_Quellcode/WebAppTemplate/www/index.html
@@ -10,5 +10,6 @@
 <body>
 	<img id="logo" src="res/images/HFU-Logo.png">
 	<h1>Your web app is up and running!</h1>
+	<button id="btnSend">Send OK to server</button>
 </body>
 </html>
