--- a/1_Projektskizze/index.html
+++ b/1_Projektskizze/index.html
@@ -12,9 +12,10 @@
 		<h2>Semester: WS/SS 20XX</h2>
 		<b>Teammitglieder:</b>
 		<ul>
-			<li>Student 1 (student.1@hs-furtwangen.de)</li>
-			<li>Student 2 (student.1@hs-furtwangen.de)</li>
-			<li>Student 3 (student.1@hs-furtwangen.de)</li>
+			<li>Verena Glunz (verena.glunz@hs-furtwangen.de)</li>
+			<li>Selina Peukert (selina.theresa.peukert@hs-furtwangen.de)</li>
+			<li>Benjamin Zimmermann (b.zimmermann@hs-furtwangen.de)</li>
+			<li>Sebastian Weiser (sebastian.weiser@hs-furtwangen.de)</li>
 		</ul>
 	</header>
 	<main>
