--- a/1_Projektskizze/index.html
+++ b/1_Projektskizze/index.html
@@ -8,8 +8,8 @@
 <body>
 	<header>
 		<img src="images/HFU-Logo.png">
-		<h1>Projekt: XXX</h1>
-		<h2>Semester: WS/SS 20XX</h2>
+		<h1>Projekt: Mühle</h1>
+		<h2>Semester: SS 2022</h2>
 		<b>Teammitglieder:</b>
 		<ul>
 			<li>Verena Glunz (verena.glunz@hs-furtwangen.de)</li>
@@ -20,7 +20,7 @@
 	</header>
 	<main>
 		<h2>1. Projekt-Beschreibung</h2>
-		<p>TODO: Beschreibung des Projekts</p>
+		<p>Programmierung eines Mühlespiels, welches von zwei Spielern an einem einzigen Computer gespielt werden kann. </p>
 		<h2>2. Features und Anforderungen</h2>
 		<p>TODO: Stellen Sie die aus Ihrer Sicht wichtigsten funktionalen Anforderungen (maximal 10) zusammen:</p>
 		<ul>
