--- a/1_Projektskizze/index.html
+++ b/1_Projektskizze/index.html
@@ -74,7 +74,7 @@
 				-move()
 			}
 			Spielbrett "2" -- "1" Spieler
-			Spieler "1" *-- "0..9" Steine
+			Spieler "1" *-- "0..9" Stein
 		
 		</div>
 		<h2>4. Aufwandsschätzung und Aufteilung</h2>
