--- a/1_Projektskizze/index.html
+++ b/1_Projektskizze/index.html
@@ -88,6 +88,12 @@
 		</div>
 		<h2>4. AufwandsschÃ¤tzung und Aufteilung</h2>
 		<p>TODO: SchÃ¤tzen Sie den Aufwand der verschiedenen Teile Ihres Programms ab und legen Sie fest, wie die Aufteilung auf die Gruppenmitglieder aussehen soll.</p>
+		- Die meiste Zeit sollte für die Erfüllung der Grundanforderungen aufgebracht werden. D.h. im ersten Moment für die "Setzphase". Dies spiegelt sich auch in den Klassen wieder.
+		  Gerade bei den Klassen "Spielbrett" und "Spieler" bedarf es hierzu wahrscheinlich den größten Zeitaufwand. Weniger Aufwand bedarf es wahrscheinlich bei der Klasse "Stein".
+		  Zu beachten ist, dass genügend Zeit für Testphasen eingeplant werden.
+		  Nach erster einschätzung sollten die Grundanforderungen spätestens zu Woche 8 abgeschlossen sein. Zusätzliche Anforderungen können dann im Anschluss noch hinzugefügt werden.
+		  Dies mit eingerechnet, plus eine finale Testphase und die Erstellung des Nutzerhandbuchs sollten zu Woche 11/12 abgeschlossen sein, sodass noch ein bis zwei Wochen "puffer" vorhanden sind.
+		  Die genaue Einteilung welche Gruppenmitglieder welche Aufgaben übernehmen folgt noch.
 		<h2>Optional: Verweis auf andere HTML Dateien</h2>
 		<p><a href="otherfile.html">Eine weitere HTML-Datei</a></p>
 	</main>
