--- a/1_Projektskizze/index.html
+++ b/1_Projektskizze/index.html
@@ -88,12 +88,12 @@
 		</div>
 		<h2>4. AufwandsschÃ¤tzung und Aufteilung</h2>
 		<p>TODO: SchÃ¤tzen Sie den Aufwand der verschiedenen Teile Ihres Programms ab und legen Sie fest, wie die Aufteilung auf die Gruppenmitglieder aussehen soll.</p>
-		- Die meiste Zeit sollte für die Erfüllung der Grundanforderungen aufgebracht werden. D.h. im ersten Moment für die "Setzphase". Dies spiegelt sich auch in den Klassen wieder.
-		  Gerade bei den Klassen "Spielbrett" und "Spieler" bedarf es hierzu wahrscheinlich den größten Zeitaufwand. Weniger Aufwand bedarf es wahrscheinlich bei der Klasse "Stein".
-		  Zu beachten ist, dass genügend Zeit für Testphasen eingeplant werden.
-		  Nach erster einschätzung sollten die Grundanforderungen spätestens zu Woche 8 abgeschlossen sein. Zusätzliche Anforderungen können dann im Anschluss noch hinzugefügt werden.
+		- Die meiste Zeit sollte fÃ¼r die ErfÃ¼llung der Grundanforderungen aufgebracht werden. D.h. im ersten Moment fï¿½r die "Setzphase". Dies spiegelt sich auch in den Klassen wieder.
+		  Gerade bei den Klassen "Spielbrett" und "Spieler" bedarf es hierzu wahrscheinlich den grÃ¶ÃŸten Zeitaufwand. Weniger Aufwand bedarf es wahrscheinlich bei der Klasse "Stein".
+		  Zu beachten ist, dass genÃ¼gend Zeit fÃ¼r Testphasen eingeplant werden.
+		  Nach erster einschÃ¤tzung sollten die Grundanforderungen spÃ¤testens zu Woche 8 abgeschlossen sein. ZusÃ¤tzliche Anforderungen kÃ¶nnen dann im Anschluss noch hinzugefÃ¼gt werden.
 		  Dies mit eingerechnet, plus eine finale Testphase und die Erstellung des Nutzerhandbuchs sollten zu Woche 11/12 abgeschlossen sein, sodass noch ein bis zwei Wochen "puffer" vorhanden sind.
-		  Die genaue Einteilung welche Gruppenmitglieder welche Aufgaben übernehmen folgt noch.
+		  Die genaue Einteilung welche Gruppenmitglieder welche Aufgaben Ã¼bernehmen folgt noch.
 		<h2>Optional: Verweis auf andere HTML Dateien</h2>
 		<p><a href="otherfile.html">Eine weitere HTML-Datei</a></p>
 	</main>
