Verena: Update Projektbeschreibung Projektskizze

--- a/1_Projektskizze/index.html
+++ b/1_Projektskizze/index.html
@@ -20,7 +20,8 @@
 	</header>
 	<main>
 		<h2>1. Projekt-Beschreibung</h2>
-		<p>Programmierung eines Mühlespiels, welches von zwei Spielern an einem einzigen Computer gespielt werden kann. </p>
+		<p>Programmierung eines Mühlespiels, welches von zwei Spielern an einem einzigen Computer gespielt werden kann.
+		   Die vollständige Anleitung des Mühlespiels wird im Handbuch beschrieben.</p>
 		<h2>2. Features und Anforderungen</h2>
 		<p>TODO: Stellen Sie die aus Ihrer Sicht wichtigsten funktionalen Anforderungen (maximal 10) zusammen:</p>
 		<ul>
