Ergänzung Features und Anforderungen

--- a/1_Projektskizze/index.html
+++ b/1_Projektskizze/index.html
@@ -27,13 +27,14 @@
 		<ul>
 			<li>Was soll Ihre Anwendung leisten?</li>
 			- Grundanforderung: Setzphase: Beide Spieler können abwechselnd ihre neun Steine unter Einhaltung der Mühlespielregeln auf dem Spielfeld verteilen
-			- Spielphase: Die Spieler können abwechselnd einen ihrer Steine ein Feld weiterschieben, bzw. in der Endphase kann zu einem beliebigen Feld gesprungen werden
+			- Spielphase: Die Spieler können abwechselnd einen ihrer Steine ein Feld weiterschieben, bzw. in der Endphase kann zu einem beliebigen Feld gesprungen werden. Schlussendlich soll das gesamte Mühle Spiel gespielt werden können. 
 			<li>Welche Dienste werden angeboten?</li>
 			- Zu Beginn werden die Namen der Spieler gespeichert, sodass während dem Spiel angezeigt werden kann, welcher Spieler an der Reihe ist
 			<li>Welche Eingangsdaten sind erforderlich? Zu welchen Ausgaben werden diese verarbeitet?</li>
 			- Nach jedem Spielzug wird analysiert wie der weitere Spielverlauf ist
 			<li>Wie soll sich das System in bestimmten Situationen verhalten?</li>
 			- sobald in einer Reihe drei Steine der gleichen Farbe sind, kann ein Stein der anderen Farbe entfernt werden. Dieser darf nicht aus einer bestehenden Mühle entfernt werden können
+			- schon besetzte Felder können nicht doppelt besetzt werden
 			<li>Welche Daten sind dauerhaft zu speichern?</li>
 			- um eine Gewinnstatistik aufstellen zu können werden die Namen der Spieler und das Endergebnis gespeichert
 		</ul>
