Set method "private"

--- a/1_Projektskizze/index.html
+++ b/1_Projektskizze/index.html
@@ -74,8 +74,8 @@
 				-bool amZug
 				-int numZuSetzen
 				-int numVerbleibend
-				setzeStein()
-				nehmeStein()
+				-setzeStein()
+				-nehmeStein()
 			}
 			class Stein {
 				-string farbe
