--- a/1_Projektskizze/index.html
+++ b/1_Projektskizze/index.html
@@ -130,11 +130,11 @@
 		</div>
 		<h2>4. AufwandsschÃ¤tzung und Aufteilung</h2>
 		<p>TODO: SchÃ¤tzen Sie den Aufwand der verschiedenen Teile Ihres Programms ab und legen Sie fest, wie die Aufteilung auf die Gruppenmitglieder aussehen soll.</p>
-		Die angeführten Zeitangaben sind grobe Richtwerte, welche in Summer allerdings eine plausible Gesamtarbeitszeit ergeben. 
-		Zudem spiegeln sie wieder, wie viel Zeit für welche Arbeitsabschnitte aufgebracht werden sollte. Höchste Priorität haben, wie oben schon angedeutet, die Mindestanforderungen, welche die meisten Arbeitsstunden auf sich vereinen.
-		Die Aufgaben sind so verteilt, dass es zu einer gerechten Arbeitsteilung kommt und kein Gruppenmitglied in eine unnötige Leerlaufphase kommt.  
+		Die angefÃ¼hrten Zeitangaben sind grobe Richtwerte, welche in Summer allerdings eine plausible Gesamtarbeitszeit ergeben. 
+		Zudem spiegeln sie wieder, wie viel Zeit fÃ¼r welche Arbeitsabschnitte aufgebracht werden sollte. HÃ¶chste PrioritÃ¤t haben, wie oben schon angedeutet, die Mindestanforderungen, welche die meisten Arbeitsstunden auf sich vereinen.
+		Die Aufgaben sind so verteilt, dass es zu einer gerechten Arbeitsteilung kommt und kein Gruppenmitglied in eine unnÃ¶tige Leerlaufphase kommt.  
 		  
-Aufgaben im Wochenüberblick:		
+Aufgaben im WochenÃ¼berblick:		
 
 		Woche 1-4:			Projektskizze
 		Woche 5-9:			Mindestanforderungen			20h
