--- a/3_Dokumentation/Handbuch/index.html
+++ b/3_Dokumentation/Handbuch/index.html
@@ -21,7 +21,7 @@
 	</header>
 	<main>
 		<h2>Ziel des Spiels</h2>
-		Im Spiel Mühle geht es darum, dass jeder Spieler durch setzten seiner Spielsteine, so viele Mühlen wie moeglich zu schliessen und damit Spielsteine seines Gegenspielers vom Brett zu nehmen. 
+		Im Spiel Mühle geht es darum, dass jeder Spieler durch setzten seiner Spielsteine, so viele Mühlen wie möglich zu schliessen und damit Spielsteine seines Gegenspielers vom Brett zu nehmen. 
 		Hat ein Spieler nur noch zwei Spielsteine oder kann keinen korrekten Zug mehr machen, hat er verloren.
 		Ein Spiel gilt als unentschieden, wenn beide Spieler nur noch drei Spielsteine auf dem Spielbrett haben.
 		</ul>
@@ -45,15 +45,15 @@
 		Jedoch darf kein Spielstein aus einer bestehenden Mühle entfernt werden.
 		Sind alle Spielsteine platziert worden, beginnt die Zugphase.
 		Denn Spielern ist es nun erlaubt ihre Steine auf dem Spielbrett zu verschieben.
-		Ein Spieler klickt den Stein an, den er schieben moechte und klickt anschliessend auf eines der freien benachbarten Felder auf welches er den Stein schieben moechte.
+		Ein Spieler klickt den Stein an, den er schieben möchte und klickt anschliessend auf eines der freien benachbarten Felder auf welches er den Stein schieben möchte.
 		Sind um einen Spielstein keine freien Nachbarfelder vorhanden, kann der Stein nicht geschoben werden.
-		Durch das Schieben versuchen die Spieler wieder moeglichst oft eine Mühle zu schliessen und Steine des Gegners zu entwenden.
+		Durch das Schieben versuchen die Spieler wieder möglichst oft eine Mühle zu schliessen und Steine des Gegners zu entwenden.
 		Hat ein Spieler nur noch drei Spielsteine auf dem Brett beginnt für ihn die Springphase.
 		Er darf nun einen seiner Steine auf ein beliebiges freies Feld setzen.
 		Wieder durch anklicken des Steins und im Anschluss des freien Feldes, auf welches der Stein platziert werden soll. 
 		Bleiben einem Spieler nur noch zwei Spielsteine, hat er das Spiel verloren.
 		Wenn das Spiel somit beendet ist, erscheint ein neues Fenster.
-		Im Gewinner-Fenster wird der Gewinner der Partie praesentiert und gefeiert. 
+		Im Gewinner-Fenster wird der Gewinner der Partie präsentiert und gefeiert. 
 		</p>
 		 
 	</main>
