--- a/3_Dokumentation/Handbuch/index.html
+++ b/3_Dokumentation/Handbuch/index.html
@@ -39,7 +39,7 @@
 		Ausserdem gibt es den Button "Neues Spiel". Wird dieser angeklickt kommen die Spieler wieder zurück zm Welcome-Screen und es kann ein neues Spiel gestartet werden. 
 		</p>
 		Wird jetzt ein Spiel gestartet, hat jeder Spieler zu Beginn neuen Spielsteine.
-		Dabei werden Spieler 1 die schwarzen Spielsteine zugeteilt und Spieler 2 die weissen Spielsteine.
+		Dabei werden Spieler 1 die weissen Spielsteine zugeteilt und Spieler 2 die schwarzen Spielsteine.
 		Im laufe der Setzphase platzieren die Spieler durch klicken auf das entsprechende Feld auf dem Spielbrett, im wechsel ihre Spielsteine.
 		Sobald ein Spieler nun drei Steine zu einer Mühle gelegt hat, ist es ihm erlaubt einen Spielstein seines Gegenspielers vom Spielbrett zu nehmen.
 		Jedoch darf kein Spielstein aus einer bestehenden Mühle entfernt werden.
