--- a/3_Dokumentation/Handbuch/index.html
+++ b/3_Dokumentation/Handbuch/index.html
@@ -43,7 +43,7 @@
 		</p> 
 		Mit jedem Mausklick werden versciedene Methoden mit entsprechenden Abfragen von Wahrheitswerten durchlaufen. Erst wenn alle Bedingungen erfüllt sind kommt es zur Ausführung des Spielzugs.
 		</p> 
-		<img src="images/Screen_Wahrheitswerte.pdf">
+		<img src="images/Screen_Wahrheitswerte.png">
 		</p> 
 		Im Laufe der Setzphase platzieren die Spieler im Wechsel durch Klicken auf das entsprechende Feld auf dem Spielbrett ihre Spielsteine.
 		Sobald ein Spieler nun drei Steine zu einer Mühle gelegt hat, ist es ihm erlaubt einen Spielstein seines Gegenspielers vom Spielbrett zu nehmen.
